fix product page wrong width

--- a/assets/scss/components/_product.scss
+++ b/assets/scss/components/_product.scss
@@ -40,7 +40,7 @@
 }
 
 .b-product-list__item--big {
-    max-width: calc((100% - 48px) / 3);
+    width: calc((100% - 48px) / 3);
 }
 
 .b-product-list__serial {
